Use stream.toList() directly