@@ -156,10 +156,10 @@ class DocumentUtilTest {
 
         assertThat(letters.size()).isEqualTo(2);
         assertThat(
-            letters.stream().map(letter -> letter.getDivorceDocument().getDocumentFileName()).collect(Collectors.toList()))
+            letters.stream().map(letter -> letter.getDivorceDocument().getDocumentFileName()).toList())
             .containsExactlyInAnyOrder("doc1.pdf", "doc2.pdf");
         assertThat(
-            letters.stream().map(letter -> letter.getDivorceDocument().getDocumentType()).collect(Collectors.toList()))
+            letters.stream().map(letter -> letter.getDivorceDocument().getDocumentType()).toList())
             .containsExactlyInAnyOrder(NOTICE_OF_PROCEEDINGS_APP_1, NOTICE_OF_PROCEEDINGS_APP_1);
     }
 
@@ -343,7 +343,7 @@ class DocumentUtilTest {
         );
 
         assertThat(documentTypes.stream().map(DocumentUtil::getConfidentialDocumentType)
-                .collect(Collectors.toList()))
+                .toList())
             .containsExactly(
                 ConfidentialDocumentsReceived.NOTICE_OF_PROCEEDINGS_APP_1,
                 ConfidentialDocumentsReceived.NOTICE_OF_PROCEEDINGS_APP_2,
